--- a/translations/sentinels.tex/pl.po
+++ b/translations/sentinels.tex/pl.po
@@ -110,6 +110,9 @@ msgid ""
 "\\resources{10}{2}{1}\n"
 "\n"
 msgstr ""
+"\\textbf{Początkowy Przychód:}\\par\n"
+"\\resources{10}{2}{1}\n"
+"\n"
 
 #. type: multicols*
 #: coops/sentinels.tex:34
@@ -155,6 +158,8 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Map Setup}}\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Przygotowanie Mapy}}\n"
+"\n"
 
 #. type: multicols*
 #: coops/sentinels.tex:44
@@ -203,6 +208,8 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Victory Conditions}}\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Warunki Zwycięstwa}}\n"
+"\n"
 
 #. type: multicols*
 #: coops/sentinels.tex:61
@@ -220,6 +227,8 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Defeat Conditions}}\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Warunki Przegranej}}\n"
+"\n"
 
 #. type: multicols*
 #: coops/sentinels.tex:65
@@ -245,6 +254,8 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Timed Events}}\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Wydarzenia Czasowe}}\n"
+"\n"
 
 #. type: multicols*
 #: coops/sentinels.tex:75
