--- a/coops/titans_stronghold.tex
+++ b/coops/titans_stronghold.tex
@@ -11,7 +11,7 @@
   No one has ever entered and returned to tell the tale.
   Now, there are rumors about the death of the guardians and an incredible amount of treasures, potentially including the best bow in the world.\\
   If this legend of the empty fort is true, it's time for excavation.\\
-  But for now, you and your allies need to find the keys spread across Antagarich to open the gate of the Titans' stronghold.
+  But for now, you and your allies need to find the keys spread across Antagarich to open the gate of the Titans' Stronghold.
 }
 \subsection*{\MakeUppercase{Scenario Length}}
 
@@ -80,11 +80,11 @@ There are undefeated units left in the Titans' Stronghold at the end of Round 16
   \item Remember: the center of VI-VII tile next to all I tiles is the Titans' Stronghold.
   \item No one can enter the Titans' Stronghold until all other VII fields are flagged by any player.
   \item After defeating a level VII neutral army, instead of resolving the field, the player chooses an option three times from the following list (an option may be chosen multiple times):
-  \begin{itemize}
-    \item Another player (your choice) gains 5 gold.
-    \item Another player (your choice) gains 2 building materials.
-    \item Another player (your choice) gains 1 valuable.
-  \end{itemize}
+    \begin{itemize}[leftmargin=12pt]
+      \item Another player (your choice) gains 5 \svg{gold}
+      \item Another player (your choice) gains 2 \svg{building_materials}
+      \item Another player (your choice) gains 1 \svg{valuables}
+    \end{itemize}
   Then, flag the VII field with a faction cube.
   (There is no bonus in solo play!)
   \item Ignore all yellow borders in I tiles.
