--- a/translations/titans_stronghold.tex/pl.po
+++ b/translations/titans_stronghold.tex/pl.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-06-29 16:10+0200\n"
+"POT-Creation-Date: 2024-06-30 20:00+0200\n"
 "PO-Revision-Date: 2024-06-29 16:10+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -19,7 +19,8 @@ msgstr ""
 
 #. type: multicols*
 #: coops/sentinels.tex:5 coops/titans_stronghold.tex:5
-#: coops/emerald_island.tex:5 sections/credits.tex:10
+#: coops/emerald_island.tex:5 clash/bloody_grail.tex:5 clash/the_hunt.tex:5
+#: sections/credits.tex:10
 #, no-wrap
 msgid ""
 "{2}\n"
@@ -27,22 +28,27 @@ msgid ""
 msgstr ""
 
 #. type: multicols*
-#: coops/sentinels.tex:28 coops/titans_stronghold.tex:29
+#: coops/sentinels.tex:28 coops/titans_stronghold.tex:29 clash/the_hunt.tex:25
 #, no-wrap
 msgid ""
 "\\textbf{Starting Income:}\\par\n"
 "\\resources{10}{2}{1}\n"
 "\n"
 msgstr ""
+"\\textbf{Początkowy Przychód:}\\par\n"
+"\\resources{10}{2}{1}\n"
+"\n"
 
 #. type: multicols*
 #: coops/sentinels.tex:42 coops/titans_stronghold.tex:43
-#: coops/emerald_island.tex:40
+#: coops/emerald_island.tex:40 clash/the_hunt.tex:39
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Map Setup}}\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Przygotowanie Mapy}}\n"
+"\n"
 
 #. type: multicols*
 #: coops/sentinels.tex:59 coops/titans_stronghold.tex:62
@@ -52,6 +58,8 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Victory Conditions}}\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Warunki Zwycięstwa}}\n"
+"\n"
 
 #. type: multicols*
 #: coops/sentinels.tex:63 coops/titans_stronghold.tex:66
@@ -61,15 +69,19 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Defeat Conditions}}\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Warunki Przegranej}}\n"
+"\n"
 
 #. type: multicols*
 #: coops/sentinels.tex:69 coops/titans_stronghold.tex:70
-#: coops/emerald_island.tex:60
+#: coops/emerald_island.tex:60 clash/bloody_grail.tex:66 clash/the_hunt.tex:67
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Timed Events}}\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Wydarzenia Czasowe}}\n"
+"\n"
 
 #.  !TeX spellcheck = en_US
 #. type: Plain text
@@ -78,6 +90,8 @@ msgid ""
 "\\addscenariosection{1}{Cooperative scenario}{Titans' Stronghold}{\\images/"
 "earthquake.png}"
 msgstr ""
+"\\addscenariosection{1}{Tryb Kooperacyjny}{Twierdza Tytanów}{\\images/"
+"earthquake.png}"
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:7 coops/emerald_island.tex:7
@@ -86,6 +100,8 @@ msgid ""
 "\\textbf{Author:} Invoceusse\n"
 "\n"
 msgstr ""
+"\\textbf{Autor:} Invoceusse\n"
+"\n"
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:9
@@ -94,6 +110,8 @@ msgid ""
 "\\textbf{Source:} \\href{https://discord.com/channels/740870068178649108/1219333721019256943}{Archon Studio Discord}\n"
 "\n"
 msgstr ""
+"\\textbf{Źródło:} \\href{https://discord.com/channels/740870068178649108/1219333721019256943}{Discord Archon Studio}\n"
+"\n"
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:17
@@ -103,11 +121,19 @@ msgid ""
 "  No one has ever entered and returned to tell the tale.\n"
 "  Now, there are rumors about the death of the guardians and an incredible amount of treasures, potentially including the best bow in the world.\\\\\n"
 "  If this legend of the empty fort is true, it's time for excavation.\\\\\n"
-"  But for now, you and your allies need to find the keys spread across Antagarich to open the gate of the Titans' stronghold.\n"
+"  But for now, you and your allies need to find the keys spread across Antagarich to open the gate of the Titans' Stronghold.\n"
 "}\n"
 "\\subsection*{\\MakeUppercase{Scenario Length}}\n"
 "\n"
 msgstr ""
+"\\textit{Dawno temu zbudowano potężną fortecę, aby pomieścić fantastycznych i zabójczych Tytanów.\n"
+"  Nikt nigdy nie wszedł do środka i nie wrócił, by opowiedzieć o tym.\n"
+"  Teraz krążą plotki o śmierci strażników i niesamowitej ilości skarbów, w tym potencjalnie najlepszego łuku na świecie.\\\\\n"
+"  Jeśli ta legenda o pustej fortecy jest prawdziwa, nadszedł czas na wykopaliska.\\\\\n"
+"  Ale na razie ty i twoi sojusznicy musicie znaleźć klucze rozsiane po Antagarich, aby otworzyć bramę do Twierdzy Tytanów.\n"
+"}\n"
+"\\subsection*{\\MakeUppercase{Długość Scenariusza}}\n"
+"\n"
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:19
@@ -116,6 +142,8 @@ msgid ""
 "This scenario is played over 16 rounds (15 on Impossible difficulty).\n"
 "\n"
 msgstr ""
+"Ten scenariusz rozgrywany jest w 16 rundach (15 na Niemożliwym poziomie trudności).\n"
+"\n"
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:21 coops/emerald_island.tex:18
@@ -124,6 +152,8 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Player setup}}\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Przygotowanie Graczy}}\n"
+"\n"
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:23
@@ -132,6 +162,8 @@ msgid ""
 "\\textbf{Player Count:} 1 - 6\n"
 "\n"
 msgstr ""
+"\\textbf{Liczba Graczy:} 1 - 6\n"
+"\n"
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:26
@@ -141,6 +173,9 @@ msgid ""
 "\\resources{30}{8}{2}\n"
 "\n"
 msgstr ""
+"\\textbf{Zasoby Początkowe:}\\par\n"
+"\\resources{30}{8}{2}\n"
+"\n"
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:35 coops/emerald_island.tex:32
@@ -153,6 +188,12 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\textbf{Jednostki Początkowe:}\n"
+"\\begin{itemize}\n"
+"  \\item Grupa \\svg{bronze} jednostek do wyboru.\n"
+"  \\item Garstka \\svg{bronze} jednostek do wyboru.\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:37
@@ -161,6 +202,8 @@ msgid ""
 "\\textbf{Town Buildings:} None\n"
 "\n"
 msgstr ""
+"\\textbf{Budynki Początkowe:} Brak\n"
+"\n"
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:39
@@ -169,14 +212,19 @@ msgid ""
 "\\textbf{Map tile Pool:} None\n"
 "\n"
 msgstr ""
+"\\textbf{Pula Kafelków Mapy:} Brak\n"
+"\n"
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:41 coops/emerald_island.tex:38
+#: clash/bloody_grail.tex:35 clash/the_hunt.tex:37
 #, no-wrap
 msgid ""
 "\\textbf{Additional Bonus:} None\n"
 "\n"
 msgstr ""
+"\\textbf{Dodatkowy Bonus:} Brak\n"
+"\n"
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:45 coops/emerald_island.tex:42
@@ -185,6 +233,8 @@ msgid ""
 "Take the following Map tiles and arrange them as shown in the scenario map layout (P stands for the number of players):\n"
 "\n"
 msgstr ""
+"Weź następujące Kafelki Mapy i ułóż je zgodnie z układem mapy scenariusza (G oznacza liczbę graczy):\n"
+"\n"
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:51
@@ -197,6 +247,12 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\textbf{(1*G) Początkowy (I) Kafelek Mapy}\n"
+"\\begin{itemize}\n"
+"  \\item Początkowe Kafelki wybranych frakcji.\n"
+"  \\item Zignoruj ich żółte granice.\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:53
@@ -205,6 +261,8 @@ msgid ""
 "\\textbf{(2*P) × Far (II-III) Map tile}\n"
 "\n"
 msgstr ""
+"\\textbf{(2*G) × Daleki (II-III) Kafelek Mapy}\n"
+"\n"
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:55
@@ -213,6 +271,8 @@ msgid ""
 "\\textbf{(2*P) × Near (IV-V) Map tile}\n"
 "\n"
 msgstr ""
+"\\textbf{(2*G) × Bliski (IV-V) Kafelek Mapy}\n"
+"\n"
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:57
@@ -221,6 +281,8 @@ msgid ""
 "\\textbf{(1*P) + 1 × Center (VI-VII) Map tile}\n"
 "\n"
 msgstr ""
+"\\textbf{(1*G) + 1 × Centralny (VI-VII) Kafelek Mapy}\n"
+"\n"
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:60
@@ -230,6 +292,9 @@ msgid ""
 "The center of this tile is the Titans' Stronghold.\n"
 "\n"
 msgstr ""
+"Jeśli nie masz wystarczającej liczby kafelków VI-VII, możesz użyć innego kafelka blisko kafelka I.\n"
+"Centrum tego kafelka to Twierdza Tytanów.\n"
+"\n"
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:64
@@ -238,6 +303,8 @@ msgid ""
 "Kill all units in the Titans' Stronghold (the center of tile VI-VII next to tiles I).\n"
 "\n"
 msgstr ""
+"Zabij wszystkie jednostki w Twierdzy Tytanów (centrum kafelka VI-VII obok kafelków I).\n"
+"\n"
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:68
@@ -246,6 +313,8 @@ msgid ""
 "There are undefeated units left in the Titans' Stronghold at the end of Round 16 (15 on Impossible difficulty).\n"
 "\n"
 msgstr ""
+"W Twierdzy Tytanów pozostają niepokonane jednostki na koniec Rundy 16 (15 na Niemożliwym poziomie trudności).\n"
+"\n"
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:75
@@ -257,6 +326,11 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\textbf{Rundy 4., 8. i 12.:}\n"
+"\\begin{itemize}\n"
+"  \\item Usuń wszystkie Czarne Kostki z każdego Wiatraka, Młyna Wodnego i Mistycznego Ogródu na mapie.\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:77
@@ -275,11 +349,11 @@ msgid ""
 "  \\item Remember: the center of VI-VII tile next to all I tiles is the Titans' Stronghold.\n"
 "  \\item No one can enter the Titans' Stronghold until all other VII fields are flagged by any player.\n"
 "  \\item After defeating a level VII neutral army, instead of resolving the field, the player chooses an option three times from the following list (an option may be chosen multiple times):\n"
-"  \\begin{itemize}\n"
-"    \\item Another player (your choice) gains 5 gold.\n"
-"    \\item Another player (your choice) gains 2 building materials.\n"
-"    \\item Another player (your choice) gains 1 valuable.\n"
-"  \\end{itemize}\n"
+"    \\begin{itemize}[leftmargin=12pt]\n"
+"      \\item Another player (your choice) gains 5 \\svg{gold}\n"
+"      \\item Another player (your choice) gains 2 \\svg{building_materials}\n"
+"      \\item Another player (your choice) gains 1 \\svg{valuables}\n"
+"    \\end{itemize}\n"
 "  Then, flag the VII field with a faction cube.\n"
 "  (There is no bonus in solo play!)\n"
 "  \\item Ignore all yellow borders in I tiles.\n"
@@ -297,6 +371,37 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Dodatkowe Zasady}}\n"
+"\\begin{itemize}\n"
+"  \\item Pamiętaj: centrum kafelka VI-VII obok wszystkich startowych to Twierdza Tytanów.\n"
+"  \\item Nie można wejść do Twierdzy Tytanów, dopóki wszystkie inne pola VII nie zostaną oflagowane przez dowolnego gracza.\n"
+"  \\item Po pokonaniu neutralnej armii poziomu VII, zamiast rozpatrywać pole, gracz wybiera trzykrotnie jedną opcję z poniższej listy (opcję można wybrać wielokrotnie):\n"
+"  \\begin{itemize}[leftmargin=12pt]\n"
+"    \\item Inny gracz (twój wybór) zyskuje 5 \\svg{gold}\n"
+"    \\item Inny gracz (twój wybór) zyskuje 2 \\svg{building_materials}\n"
+"    \\item Inny gracz (twój wybór) zyskuje 1 \\svg{valuables}\n"
+"  \\end{itemize}\n"
+"  Następnie, oflaguj pole VII kostką frakcji.\n"
+"  (W grze solo nie ma bonusu!)\n"
+"  \\item Zignoruj żółte granice na kafelkach I.\n"
+"  \\item Możesz użyć swojego żetonu budowy, aby przekazać swoje zasoby innemu graczowi.\n"
+"  \\item Dwóch graczy może użyć swoich żetonów budowy do wymiany artefaktów i/lub zaklęć.\n"
+"  \\item Za każdym razem, gdy gracz odwiedza Obelisk, ten gracz rzuca jedną kością skarbu i jedną kością zasobu, i rozpatruje jedną z nich.\n"
+"  \\item Kiedy wszystkie pola VII (z wyjątkiem Twierdzy Tytanów) zostaną oznaczone, losowo dobierz i wymieszaj określoną liczbę (patrz na następną stronę) kart jednostek neutralnych z odpowiednich talii, aby utworzyć osobną talię Jednostek Neutralnych dla Twierdzy Tytanów (talia Twierdzy Tytanów może być dzielona na dwie części, ponieważ niektóre scenariusze są w przeciwnym razie niemożliwe do wykonania z kartami z pewnych dodatków).\n"
+"  \\item Za każdym razem, gdy Bohater wchodzi do Twierdzy Tytanów, dobiera 5 kart z talii Twierdzy Tytanów zamiast z talii Kart Jednostek Neutralnych.\n"
+"    Jednostki są umieszczane na planszy Walki (zob. \\mbox{str. 29} w Księdze Zasad).\n"
+"    Gracze próbują pokonać jednostki znajdujące się w Twierdzy Tytanów.\n"
+"    Wszystkie Jednostki Neutralne pokonane podczas walki w Twierdzy Tytanów są zwracane do odpowiednich talii Jednostek Neutralnych, a nie do talii Twierdzy Tytanów.\n"
+"    Wszystkie Jednostki Neutralne, które przetrwały walkę w Twierdzy Tytanów, są ponownie tasowane do talii Twierdzy Tytanów.\n"
+"    Jeśli w tej talii brakuje Kart Jednostek, należy dobrać tyle Kart Jednostek, ile jest dostępnych, i umieścić je na planszy Walki.\n"
+"  \\item Walka w Twierdzy Tytanów teraz kosztuje 1 PR za przedłużenie na każdą rundę walki, tak jak walka przeciwko jednostkom poziomu innego niż błękitny.\n"
+"  \\item Dodatkowo żaden gracz nie może:\n"
+"  \\begin{itemize}\n"
+"    \\item Atakować innych Bohaterów.\n"
+"    \\item Zajmować Kopalni lub Osady, które są już kontrolowane.\n"
+"  \\end{itemize}\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:105 coops/titans_stronghold.tex:111
@@ -362,33 +467,74 @@ msgid ""
 "Then\\linebreak 3\\bronze 8\\silver 10\\golden 6\\azure}\\\\ "
 "\\end{tabularx} }"
 msgstr ""
+"\\hommtable[]{28}{ \\centering \\medskip \\textbf{Siła armii Twierdzy "
+"Tytanów}\\\\ \\bigskip \\newcommand{\\bronze}[0]{\\svg[12]{bronze}} "
+"\\newcommand{\\silver}[0]{\\svg[12]{silver}} \\newcommand{\\golden}[0]"
+"{\\svg[12]{golden}} \\newcommand{\\azure}[0]{\\svg[12]{azure}} "
+"\\begin{tabularx}{\\linewidth}{p{0.15\\linewidth}XXXX} & \\darkcell{Łatwy} & "
+"\\darkcell{Średni} & \\darkcell{Trudny} & \\darkcell{Niemożliwy}\\\\ "
+"\\darkcell[1.2]{1 gracz} & \\lightcell[1.2]{3\\bronze 2\\silver 1\\golden "
+"1\\azure} & \\lightcell[1.2]{2\\bronze 2\\silver 2\\golden 1\\azure} & "
+"\\lightcell[1.2]{2\\bronze 2\\silver 2\\golden 2\\azure} & \\lightcell[1.2]"
+"{1\\bronze 2\\silver 2\\golden 3\\azure}\\\\ \\darkcell[1.2]{2 graczy} & "
+"\\lightcell[1.2]{5\\bronze 5\\silver 3\\golden 1\\azure} & \\lightcell[1.2]"
+"{4\\bronze 5\\silver 3\\golden 2\\azure} & \\lightcell[1.2]{2\\bronze "
+"5\\silver 5\\golden 3\\azure} & \\lightcell[1.2]{1\\bronze 5\\silver "
+"7\\golden 4\\azure}\\\\ \\darkcell[1.8]{3 graczy} & \\lightcell[1.8]"
+"{8\\bronze 7\\silver 4\\golden 2\\azure} & \\lightcell[1.8]{6\\bronze "
+"7\\silver 5\\golden 3\\azure} & \\lightcell[1.8]{2\\bronze 3\\silver "
+"4\\golden 3\\azure \\linebreak Potem\\linebreak 2\\bronze 4\\silver "
+"3\\golden 2\\azure} & \\lightcell[1.8]{1\\bronze 3\\silver 5\\golden "
+"3\\azure \\linebreak Potem\\linebreak 1\\bronze 4\\silver 5\\golden "
+"3\\azure}\\\\ \\darkcell[1.8]{4 graczy} & \\lightcell[1.8]{10\\bronze "
+"10\\silver 6\\golden 2\\azure} & \\lightcell[1.8]{8\\bronze 10\\silver "
+"6\\golden 4\\azure} & \\lightcell[1.8]{2\\bronze 5\\silver 5\\golden "
+"3\\azure \\linebreak Potem\\linebreak 2\\bronze 5\\silver 5\\golden "
+"3\\azure} & \\lightcell[1.8]{1\\bronze 5\\silver 7\\golden 4\\azure "
+"\\linebreak Potem\\linebreak 1\\bronze 5\\silver 7\\golden 4\\azure}\\\\ "
+"\\darkcell[1.8]{5 graczy} & \\lightcell[1.8]{6\\bronze 6\\silver 4\\golden "
+"1\\azure \\linebreak Potem\\linebreak 7\\bronze 6\\silver 3\\golden "
+"2\\azure} & \\lightcell[1.8]{5\\bronze 6\\silver 4\\golden 2\\azure "
+"\\linebreak Potem\\linebreak 5\\bronze 6\\silver 4\\golden 3\\azure} & "
+"\\lightcell[1.8]{3\\bronze 6\\silver 6\\golden 4\\azure \\linebreak "
+"Potem\\linebreak 3\\bronze 6\\silver 6\\golden 4\\azure} & \\lightcell[1.8]"
+"{1\\bronze 6\\silver 8\\golden 6\\azure \\linebreak Potem\\linebreak "
+"2\\bronze 6\\silver 8\\golden 5\\azure}\\\\ \\darkcell[1.7]{6 graczy} & "
+"\\lightcell[1.8]{8\\bronze 8\\silver 4\\golden 1\\azure \\linebreak "
+"Potem\\linebreak 7\\bronze 7\\silver 5\\golden 2\\azure} & \\lightcell[1.8]"
+"{6\\bronze 8\\silver 4\\golden 3\\azure \\linebreak Potem\\linebreak "
+"6\\bronze 7\\silver 5\\golden 3\\azure} & \\lightcell[1.8]{3\\bronze "
+"8\\silver 7\\golden 5\\azure \\linebreak Potem\\linebreak 3\\bronze "
+"7\\silver 8\\golden 4\\azure} & \\lightcell[1.8]{3\\bronze 7\\silver "
+"11\\golden 6\\azure \\linebreak Potem\\linebreak 3\\bronze 8\\silver "
+"10\\golden 6\\azure}\\\\ \\end{tabularx} }"
 
 #. type: minipage
 #: coops/titans_stronghold.tex:228
 msgid "\\captionof{figure}{1-PLAYER SCENARIO}"
-msgstr ""
+msgstr "\\captionof{figure}{SCENARIUSZ 1-OSOBOWY}"
 
 #. type: minipage
 #: coops/titans_stronghold.tex:228
 msgid "\\captionof{figure}{2-PLAYER SCENARIO}"
-msgstr ""
+msgstr "\\captionof{figure}{SCENARIUSZ 2-OSOBOWY}"
 
 #. type: minipage
 #: coops/titans_stronghold.tex:228
 msgid "\\captionof{figure}{3-PLAYER SCENARIO}"
-msgstr ""
+msgstr "\\captionof{figure}{SCENARIUSZ 3-OSOBOWY}"
 
 #. type: minipage
 #: coops/titans_stronghold.tex:228
 msgid "\\captionof{figure}{4-PLAYER SCENARIO}"
-msgstr ""
+msgstr "\\captionof{figure}{SCENARIUSZ 4-OSOBOWY}"
 
 #. type: minipage
 #: coops/titans_stronghold.tex:228
 msgid "\\captionof{figure}{5-PLAYER SCENARIO}"
-msgstr ""
+msgstr "\\captionof{figure}{SCENARIUSZ 5-OSOBOWY}"
 
 #. type: minipage
 #: coops/titans_stronghold.tex:228
 msgid "\\captionof{figure}{6-PLAYER SCENARIO}"
-msgstr ""
+msgstr "\\captionof{figure}{SCENARIUSZ 6-OSOBOWY}"
