--- a/translations/titans_stronghold.tex/pl.po
+++ b/translations/titans_stronghold.tex/pl.po
@@ -472,7 +472,7 @@ msgstr ""
 "\\newcommand{\\silver}[0]{\\svg[12]{silver}} \\newcommand{\\golden}[0]"
 "{\\svg[12]{golden}} \\newcommand{\\azure}[0]{\\svg[12]{azure}} "
 "\\begin{tabularx}{\\linewidth}{p{0.15\\linewidth}XXXX} & \\darkcell{Łatwy} & "
-"\\darkcell{Średni} & \\darkcell{Trudny} & \\darkcell{Niemożliwy}\\\\ "
+"\\darkcell{Normalny} & \\darkcell{Trudny} & \\darkcell{Niemożliwy}\\\\ "
 "\\darkcell[1.2]{1 gracz} & \\lightcell[1.2]{3\\bronze 2\\silver 1\\golden "
 "1\\azure} & \\lightcell[1.2]{2\\bronze 2\\silver 2\\golden 1\\azure} & "
 "\\lightcell[1.2]{2\\bronze 2\\silver 2\\golden 2\\azure} & \\lightcell[1.2]"
