--- a/coops/sentinels.tex
+++ b/coops/sentinels.tex
@@ -1,7 +1,7 @@
 % !TeX spellcheck = en_US
 \addscenariosection{1}{Cooperative scenario}{Sentinels}{\images/sentinel.png}
 
-\begin{multicols*}{2}
+\begin{multicols}{2}
 
 \textbf{Author:} silence70011
 
@@ -141,7 +141,13 @@ One of your towns is captured, or a main hero is defeated in a battle (retreat d
   \item When a player retreats, the enemy army draws up to the ``minimum'' of 4 units and takes these as starting units to the next fight.
 \end{itemize}
 
-\end{multicols*}
+\columnbreak
+
+\vspace*{3.5em}
+\hspace{-10em}
+\includegraphics[width=0.6\paperwidth]{\_assets/maps/sentinels.png}
+
+\end{multicols}
 
 \hommtable[]{18}{
   \centering
@@ -177,11 +183,5 @@ One of your towns is captured, or a main hero is defeated in a battle (retreat d
       (7\golden, 3\azure)}\\
   \end{tabularx}
 }
-
-\vspace{3em}
-
-\begin{center}
-  \includegraphics[width=0.6\paperwidth]{\_assets/maps/sentinels.png}
-\end{center}
 
 \footnotetext[1]{Always 1 unit of Azure Dragons (starting units of Boss Army). The rest is random\label{azure}.}
