--- a/coops/sentinels.tex
+++ b/coops/sentinels.tex
@@ -106,7 +106,7 @@ One of your towns is captured, or a main hero is defeated in a battle (retreat d
 
 \begin{itemize}
   \item Enemy armies spawn on a random Obelisk field (use hero miniatures from factions not in play).
-  \item Determine which Obelisk field by rolling 2 Attack Dice. Apply the results as following (D1/D2), reroll every 0:
+  \item Determine which Obelisk field by rolling 2 Attack Dice. Apply the results as follows (D1/D2), reroll any 0:
   \begin{itemize}[leftmargin=15pt]
     \item +1/+1 = North, +1/-1 = East
     \item -1/+1 = West, -1/-1 = South
