--- a/coops/sentinels.tex
+++ b/coops/sentinels.tex
@@ -111,7 +111,7 @@ One of your towns is captured, or a main hero is defeated in a battle (retreat d
     \item +1/+1 = North, +1/-1 = East
     \item -1/+1 = West, -1/-1 = South
   \end{itemize}
-  \item For a more balanced distribution, in Rounds 7 and 9, only roll the second Attack Die (D2). For D1 take the opposite result from what was rolled in the previous Round.
+  \item For a more balanced distribution, in Rounds 7 and 9, only roll the second Attack Die (D2). For D1, take the opposite result from what was rolled in the previous Round.
   Rounds 8 and 10 are entirely random.
   \item If the tile where an enemy is to spawn hasn't been discovered yet, flip it over and orient it as preferred.
   \item If there is a hero on the field where the enemy spawns, a fight starts immediately.
