--- a/translations/credits.tex/credits.tex.pot
+++ b/translations/credits.tex/credits.tex.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2024-06-29 16:13+0200\n"
+"POT-Creation-Date: 2024-06-30 21:05+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -27,19 +27,19 @@ msgid ""
 msgstr ""
 
 #. type: multicols*
+#: coops/sentinels.tex:145 clash/the_hunt.tex:43 sections/credits.tex:25
+#, no-wrap
+msgid ""
+"\\columnbreak\n"
+"\n"
+msgstr ""
+
+#. type: multicols*
 #: coops/titans_stronghold.tex:105 coops/titans_stronghold.tex:111
 #: sections/credits.tex:27 sections/credits.tex:31
 #, no-wrap
 msgid ""
 "\\vspace*{\\fill}\n"
-"\n"
-msgstr ""
-
-#. type: multicols*
-#: clash/the_hunt.tex:43 sections/credits.tex:25
-#, no-wrap
-msgid ""
-"\\columnbreak\n"
 "\n"
 msgstr ""
 
