--- a/translations/credits.tex/fr.po
+++ b/translations/credits.tex/fr.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-06-29 16:13+0200\n"
+"POT-Creation-Date: 2024-06-30 21:05+0200\n"
 "PO-Revision-Date: 2024-06-29 16:10+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -27,19 +27,19 @@ msgid ""
 msgstr ""
 
 #. type: multicols*
+#: coops/sentinels.tex:145 clash/the_hunt.tex:43 sections/credits.tex:25
+#, no-wrap
+msgid ""
+"\\columnbreak\n"
+"\n"
+msgstr ""
+
+#. type: multicols*
 #: coops/titans_stronghold.tex:105 coops/titans_stronghold.tex:111
 #: sections/credits.tex:27 sections/credits.tex:31
 #, no-wrap
 msgid ""
 "\\vspace*{\\fill}\n"
-"\n"
-msgstr ""
-
-#. type: multicols*
-#: clash/the_hunt.tex:43 sections/credits.tex:25
-#, no-wrap
-msgid ""
-"\\columnbreak\n"
 "\n"
 msgstr ""
 
