--- a/translations/the_hunt.tex/the_hunt.tex.pot
+++ b/translations/the_hunt.tex/the_hunt.tex.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2024-06-29 16:13+0200\n"
+"POT-Creation-Date: 2024-06-30 21:05+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -58,6 +58,14 @@ msgstr ""
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Additional Rules}}\n"
+"\n"
+msgstr ""
+
+#. type: multicols*
+#: coops/sentinels.tex:145 clash/the_hunt.tex:43 sections/credits.tex:25
+#, no-wrap
+msgid ""
+"\\columnbreak\n"
 "\n"
 msgstr ""
 
@@ -170,14 +178,6 @@ msgstr ""
 #, no-wrap
 msgid ""
 "Take the following Map tiles and arrange them as shown in the scenario map layout.\n"
-"\n"
-msgstr ""
-
-#. type: multicols*
-#: clash/the_hunt.tex:43 sections/credits.tex:25
-#, no-wrap
-msgid ""
-"\\columnbreak\n"
 "\n"
 msgstr ""
 
