Artwork of the last half-empty page

--- a/campaigns/inferno_devilish_plan.tex
+++ b/campaigns/inferno_devilish_plan.tex
@@ -175,3 +175,8 @@ During this ``Inferno'' campaign scenario, the following rules apply:
     \node at (-11.3, -0.5) {\large{{\textbf{\textcolor{darkcandyapplered}{Tiles}}}}};
   \end{tikzpicture}
 \end{figure*}
+
+\begin{center}
+  \vspace*{6em}
+  \includegraphics[width=0.6\textwidth]{\_assets/art/cerberi.png}
+\end{center}
