--- a/campaigns/inferno_devilish_plan.tex
+++ b/campaigns/inferno_devilish_plan.tex
@@ -116,7 +116,7 @@ You fail to defeat the Enemy Hero and the Gold Dragon Armies by the end of the R
   \item Read: ``Our underlings have done well. They have managed to raise a volcano
     and erect a fort in a sparsely populated forest just outside of Erathia's border.
     While the Dungeon Overlords make their way underground toward the Erathian capitol,
-    you must strike at their allies, the elves of AvLee.'
+    you must strike at their allies, the elves of AvLee.''
 \end{itemize}
 
 \textbf{2$^{nd}$ Round:}
