Finalize second Inferno campaign

--- a/campaigns/inferno_devilish_plan.tex
+++ b/campaigns/inferno_devilish_plan.tex
@@ -173,6 +173,6 @@ During this ``Inferno'' campaign scenario, the following rules apply:
   };
   \node at (2,-6.5) {\large{{\textbf{\textcolor{darkcandyapplered}{N8}}}}};
   \node at (13, -6.5) {\large{{\textbf{\textcolor{darkcandyapplered}{N7}}}}};
-  \node at (4.2, -17.8) {\large{{\textbf{\textcolor{darkcandyapplered}{Inferno Map}}}}};
-  \node at (4.2, -18.3) {\large{{\textbf{\textcolor{darkcandyapplered}{Tiles}}}}};
+  \node at (4.8, -17.6) {\large{{\textbf{\textcolor{darkcandyapplered}{Inferno}}}}};
+  \node at (4.8, -18.3) {\large{{\textbf{\textcolor{darkcandyapplered}{Map Tiles}}}}};
 \end{tikzpicture}
