--- a/campaigns/inferno_steadwicks_fall.tex
+++ b/campaigns/inferno_steadwicks_fall.tex
@@ -67,7 +67,7 @@ This scenario plays out over 16 rounds.
 
 \textbf{Charging Heroes' Deck:} 2 × Might card, 2 × Magic card
 
-\textbf{Charging Heroes' Spell Deck:} 2 × Slow Spell card\footnote{All the Charging Heroes' Enemies use the same AI and Spell decks. Reset them after each Combat.}.
+\textbf{Charging Heroes' Spell Deck:} 2 × Slow Spell card\footnote{All the Charging Heroes' Enemies use the same AI and Spell decks. Reset them after every Combat.}.
 
 \vspace*{\fill}\columnbreak
 
