--- a/translations/inferno_devilish_plan.tex/inferno_devilish_plan.tex.pot
+++ b/translations/inferno_devilish_plan.tex/inferno_devilish_plan.tex.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2024-07-01 16:40+0200\n"
+"POT-Creation-Date: 2024-07-01 19:12+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -485,6 +485,6 @@ msgid ""
 "  };\n"
 "  \\node at (2,-6.5) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{N8}}}}};\n"
 "  \\node at (13, -6.5) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{N7}}}}};\n"
-"  \\node at (4.2, -17.8) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{Inferno Map}}}}};\n"
-"  \\node at (4.2, -18.3) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{Tiles}}}}};"
+"  \\node at (4.8, -17.6) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{Inferno}}}}};\n"
+"  \\node at (4.8, -18.3) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{Map Tiles}}}}};"
 msgstr ""
