[WIP] TOC update for campaigns

--- a/campaigns/main.tex
+++ b/campaigns/main.tex
@@ -1,4 +1,5 @@
 \addscenariogroup{\campaignstitle}{\layout/campaigns.png}
+\cleardoublepage\phantomsection\addcontentsline{toc}{section}{\protect\numberline{} {} {} {} {}Dungeons and Devils}
 
 \clearpage
 
