--- a/campaigns/inferno_devilish_plan.tex
+++ b/campaigns/inferno_devilish_plan.tex
@@ -1,5 +1,5 @@
 % !TeX spellcheck = en_US
-\addscenariosection{1}{Inferno Campaign -- Dungeons and Devils}{1. A Devilish Plan}{\images/firewall.png}
+\addscenariosection[subsection]{1}{Inferno Campaign -- Dungeons and Devils}{A Devilish Plan}{\images/firewall.png}
 
 \begin{multicols*}{2}
 
