--- a/translations/inferno_steadwicks_fall.tex/fr.po
+++ b/translations/inferno_steadwicks_fall.tex/fr.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-07-01 19:22+0200\n"
+"POT-Creation-Date: 2024-07-01 22:27+0200\n"
 "PO-Revision-Date: 2024-07-01 19:22+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -183,8 +183,8 @@ msgstr ""
 #. type: Plain text
 #: campaigns/inferno_steadwicks_fall.tex:3
 msgid ""
-"\\addscenariosection{1}{Inferno Campaign -- Dungeons and Devils}{2. "
-"Steadwick's Fall}{\\images/firewall.png}"
+"\\addscenariosection[subsection]{1}{Inferno Campaign -- Dungeons and Devils}"
+"{2. Steadwick's Fall}{\\images/firewall.png}"
 msgstr ""
 
 #. type: multicols*
