Inferno Campaign - Steadwick's Fall (#36)
Co-authored-by: qwrtln <qwrtln@users.noreply.github.com>

--- a/campaigns/main.tex
+++ b/campaigns/main.tex
@@ -1,5 +1,10 @@
 \addscenariogroup{\campaignstitle}{\layout/campaigns.png}
+\cleardoublepage\phantomsection\addcontentsline{toc}{section}{\protect\numberline{} {} {} {} {}Dungeons and Devils}
 
 \clearpage
 
 \input{campaigns/inferno_devilish_plan.tex}
+
+\clearpage
+
+\input{campaigns/inferno_steadwicks_fall.tex}
