--- a/campaigns/main.tex
+++ b/campaigns/main.tex
@@ -1,9 +1,13 @@
 \addscenariogroup{\campaignstitle}{\layout/campaigns.png}
 
+% \clearpage
+
+% \input{campaigns/inferno_devilish_plan.tex}
+
+% \clearpage
+
+% \input{campaigns/inferno_steadwicks_fall.tex}
+
 \clearpage
 
-\input{campaigns/inferno_devilish_plan.tex}
-
-\clearpage
-
-\input{campaigns/inferno_steadwicks_fall.tex}
+\input{campaigns/inferno_deal_with_the_devil.tex}
