Move campaing header to its first scenario

--- a/campaigns/inferno_devilish_plan.tex
+++ b/campaigns/inferno_devilish_plan.tex
@@ -1,4 +1,5 @@
 % !TeX spellcheck = en_US
+\cleardoublepage\phantomsection\addcontentsline{toc}{section}{\protect\numberline{} {} {} {} {}Dungeons and Devils}
 \addscenariosection[subsection]{1}{Inferno Campaign -- Dungeons and Devils}{1. A Devilish Plan}{\images/firewall.png}
 
 \begin{multicols*}{2}
@@ -21,7 +22,7 @@ This scenario plays out over 13 rounds.
 
 \textbf{Faction:} Inferno
 
-\textbf{Faction Hero:} Choose any   
+\textbf{Faction Hero:} Choose any
 
 \textbf{Starting Resources:}\par
 \resources{15}{3}{1}
@@ -40,7 +41,7 @@ This scenario plays out over 13 rounds.
 
 \vspace*{\fill}\columnbreak
 
-\textbf{Bonus:} Choose one of the following options: 
+\textbf{Bonus:} Choose one of the following options:
 \begin{itemize}
   \item Add a ``Slayer'' spell to your hand
   \item Add the ``Armor of Wonder'' Artifact to your hand
@@ -51,7 +52,7 @@ This scenario plays out over 13 rounds.
 
 \textbf{Faction:} Rampart
 
-\textbf{Enemy Armies:} 
+\textbf{Enemy Armies:}
 
 \begin{itemize}
   \item \textbf{Gold Dragon Army:} A Pack of Gold Dragons, a Pack of Unicorns, a Pack of Dendroids, a Pack of Centaurs
