--- a/translations/inferno_steadwicks_fall.tex/pl.po
+++ b/translations/inferno_steadwicks_fall.tex/pl.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-07-02 08:22+0200\n"
+"POT-Creation-Date: 2024-07-02 08:27+0200\n"
 "PO-Revision-Date: 2024-07-01 19:22+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -128,6 +128,20 @@ msgid ""
 msgstr ""
 
 #. type: multicols*
+#: campaigns/inferno_devilish_plan.tex:26
+#: campaigns/inferno_steadwicks_fall.tex:23
+#, fuzzy, no-wrap
+#| msgid ""
+#| "\\textbf{Additional Bonus:} None\n"
+#| "\n"
+msgid ""
+"\\textbf{Faction Hero:} Choose any\n"
+"\n"
+msgstr ""
+"\\textbf{Dodatkowy Bonus:} Brak\n"
+"\n"
+
+#. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:34
 #: campaigns/inferno_steadwicks_fall.tex:31
 #, no-wrap
@@ -205,7 +219,7 @@ msgstr ""
 #: campaigns/inferno_steadwicks_fall.tex:13
 #, no-wrap
 msgid ""
-"\\textit{Catherine Ironfist has enlisted aid from Bracada and AvLee. \n"
+"\\textit{Catherine Ironfist has enlisted aid from Bracada and AvLee.\n"
 "  She knows we are close to Steadwick. We must occupy Steadwick before she arrives.\n"
 "  Once we own Erathia's capitol, not even Catherine Ironfist will wrench it from our hands.}\n"
 "\n"
@@ -220,14 +234,6 @@ msgid ""
 msgstr ""
 "Ten scenariusz rozgrywany jest w 16 rundach.\n"
 "\n"
-
-#. type: multicols*
-#: campaigns/inferno_steadwicks_fall.tex:23
-#, no-wrap
-msgid ""
-"\\textbf{Faction Hero:} Choose any   \n"
-"\n"
-msgstr ""
 
 #. type: multicols*
 #: campaigns/inferno_steadwicks_fall.tex:26
@@ -277,7 +283,7 @@ msgstr ""
 #: campaigns/inferno_steadwicks_fall.tex:49
 #, no-wrap
 msgid ""
-"\\textbf{Bonus:} Choose one of the following options: \n"
+"\\textbf{Bonus:} Choose one of the following options:\n"
 "\\begin{itemize}\n"
 "  \\item Add a Pack of Harpies to your hand.\n"
 "  \\item Add a Pack of Magogs to your hand.\n"
@@ -508,7 +514,7 @@ msgstr ""
 msgid ""
 "\\textbf{1$^{st}$ Round:}\n"
 "\\begin{itemize}\n"
-"  \\item Read: ``You are to be congratulated on your progress so far. \n"
+"  \\item Read: ``You are to be congratulated on your progress so far.\n"
 "    You have laid waste to Eastern Erathia, and are now within striking distance of the Erathian\n"
 "    capital of Steadwick. You must capture the capital quickly!''\n"
 "\\end{itemize}\n"
@@ -524,7 +530,7 @@ msgid ""
 "  \\item Read: ``Not only have Bracada and AvLee sent reinforcements, but we have received news that\n"
 "    Queen Catherine Ironfist is marching a sizeable army from the south. We must control the capital and its\n"
 "    garrisons before she arrives.\n"
-"    \n"
+"\n"
 msgstr ""
 
 #. type: multicols*
