--- a/campaigns/inferno_deal_with_the_devil.tex
+++ b/campaigns/inferno_deal_with_the_devil.tex
@@ -1,5 +1,5 @@
 % !TeX spellcheck = en_US
-\addscenariosection[subsection]{1}{Inferno Campaign -- Dungeons and Devils}{2. Deal With The Devil}{\images/firewall.png}
+\addscenariosection[subsection]{1}{Inferno Campaign -- Dungeons and Devils}{3. Deal With The Devil}{\images/firewall.png}
 
 \begin{multicols*}{2}
 
@@ -208,18 +208,17 @@ During this ``Inferno'' campaign scenario, the following rules apply:
     \includegraphics[width=\textwidth]{\_assets/maps/inferno_deal_with_the_devil.png}
   };
 
-  % \node at (3, -11.5) {\large{{\textbf{\textcolor{darkcandyapplered}{N3}}}}};
-  % \node at (4.4, -18.6) {\large{{\textbf{\textcolor{darkcandyapplered}{\#F1}}}}};
-  % \node at (15, -5.2) {\large{{\textbf{\textcolor{darkcandyapplered}{F10}}}}};
-  % \node at (17.3, -11.5) {\large{{\textbf{\textcolor{darkcandyapplered}{S6}}}}};
-  % \node at (8.8, -18.8) {\large{{\textbf{\textcolor{darkcandyapplered}{F3}}}}};
-  % \node at (15.9, -18.8) {\large{{\textbf{\textcolor{darkcandyapplered}{F2}}}}};
-  % \node at (2, -4.5) {\large{{\textbf{\textcolor{darkcandyapplered}{Steadwick}}}}};
-  % \node at (2, -5.2) {\large{{\textbf{\textcolor{darkcandyapplered}{S3}}}}};
-  % \node at (7.5, -5.4) {\large{{\textbf{\textcolor{darkcandyapplered}{Rampart}}}}};
-  % \node at (7.5, -6.1) {\large{{\textbf{\textcolor{darkcandyapplered}{Map Tiles}}}}};
-  % \node at (12.4, -17.8) {\large{{\textbf{\textcolor{darkcandyapplered}{Necropolis}}}}};
-  % \node at (12.4, -18.5) {\large{{\textbf{\textcolor{darkcandyapplered}{Map Tiles}}}}};
-  % \node at (2, -12.3) {\large{{\textbf{\textcolor{darkcandyapplered}{Castle}}}}};
-  % \node at (2, -13) {\large{{\textbf{\textcolor{darkcandyapplered}{Map Tiles}}}}};
+  
+  \node at (1.5, -6) {\large{{\textbf{\textcolor{darkcandyapplered}{S4}}}}};
+  \node at (7, -6) {\large{{\textbf{\textcolor{darkcandyapplered}{\#F4}}}}};
+  \node at (12.6, -8.4) {\large{{\textbf{\textcolor{darkcandyapplered}{F17}}}}};
+  \node at (15, -9.5) {\large{{\textbf{\textcolor{darkcandyapplered}{Kleesive}}}}};
+  \node at (15, -10.3) {\large{{\textbf{\textcolor{darkcandyapplered}{S6}}}}};
+  \node at (15.9, -16.8) {\large{{\textbf{\textcolor{darkcandyapplered}{N12}}}}};
+  \node at (12.4, -18) {\large{{\textbf{\textcolor{darkcandyapplered}{F16}}}}};
+  \node at (9.3, -15.6) {\large{{\textbf{\textcolor{darkcandyapplered}{F18}}}}};
+  \node at (6, -18) {\large{{\textbf{\textcolor{darkcandyapplered}{F12}}}}};
+  \node at (2, -19) {\large{{\textbf{\textcolor{darkcandyapplered}{S3}}}}};
+  \node at (0.1, -13.3) {\large{{\textbf{\textcolor{darkcandyapplered}{F3}}}}};
+  \node at (4.3, -10.3) {\large{{\textbf{\textcolor{darkcandyapplered}{F6}}}}};
 \end{tikzpicture}
