ENable all inferno campaigns

--- a/campaigns/main.tex
+++ b/campaigns/main.tex
@@ -1,12 +1,12 @@
 \addscenariogroup{\campaignstitle}{\layout/campaigns.png}
 
-% \clearpage
+\clearpage
 
-% \input{campaigns/inferno_devilish_plan.tex}
+\input{campaigns/inferno_devilish_plan.tex}
 
-% \clearpage
+\clearpage
 
-% \input{campaigns/inferno_steadwicks_fall.tex}
+\input{campaigns/inferno_steadwicks_fall.tex}
 
 \clearpage
 
